--- a/ZezoMusicPlayer/res/menu/main.xml
+++ b/ZezoMusicPlayer/res/menu/main.xml
@@ -12,6 +12,6 @@
     android:icon="@drawable/end"
     android:orderInCategory="2"
     android:showAsAction="always"
-    android:title="End2"/>
+    android:title="@string/Exit"/>
  
 </menu>
