--- a/ZezoMusicPlayer/res/values/styles.xml
+++ b/ZezoMusicPlayer/res/values/styles.xml
@@ -16,5 +16,18 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
+    <style name="MyTheme" parent="Theme.AppCompat.Light">
+         <item name="actionBarStyle">@style/MyActionBar</item>
+
+</style>
+<style name="MyActionBar" parent="style/Widget.AppCompat.Light.ActionBar">
+         <item name="android:background">#FF9D21</item>
+         <item name="titleTextStyle">@style/MyActionBarTitleText</item>
+</style> 
+<style name="MyActionBarTitleText"
+           parent="style/TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/lime</item>
+</style>
 
 </resources>
