--- a/ZezoMusicPlayer/res/layout/activity_main.xml
+++ b/ZezoMusicPlayer/res/layout/activity_main.xml
@@ -10,6 +10,8 @@
     android:id="@+id/song_list"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:fastScrollEnabled="true"
+    android:fastScrollAlwaysVisible="true"
      >
   </ListView>
  
