--- a/ZezoMusicPlayer/res/layout/activity_main.xml
+++ b/ZezoMusicPlayer/res/layout/activity_main.xml
@@ -5,6 +5,14 @@
     android:background="#000000"    
     android:orientation="vertical"
     tools:context=".MainActivity" >
+    
+    <EditText android:id="@+id/inputSearch"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:hint="Search..."
+        android:inputType="textVisiblePassword"
+        android:textColor="#00FF00"
+        />
  
   <ListView
     android:id="@+id/song_list"
