--- a/ZezoMusicPlayer/res/menu/main.xml
+++ b/ZezoMusicPlayer/res/menu/main.xml
@@ -1,17 +1,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
- 
+
+    <item
+    android:id="@+id/action_search"
+    android:icon="@drawable/search"
+    android:orderInCategory="1"
+    android:showAsAction="always"
+    android:title="@string/Search"/>
+    
   <item
     android:id="@+id/action_shuffle"
     android:icon="@drawable/rand"
-    android:orderInCategory="1"
+    android:orderInCategory="2"
     android:showAsAction="always"
     android:title="Shuffle"/>
  
   <item
     android:id="@+id/action_end"
     android:icon="@drawable/end"
-    android:orderInCategory="2"
+    android:orderInCategory="3"
     android:showAsAction="always"
-    android:title="@string/Exit"/>
+    android:title="@string/Exit"/> 
  
 </menu>
