--- a/ZezoMusicPlayer/res/layout/song.xml
+++ b/ZezoMusicPlayer/res/layout/song.xml
@@ -1,24 +1,39 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="fill_parent"
-  android:layout_height="wrap_content"
-  android:onClick="songPicked"
-  android:orientation="vertical"
-  android:padding="5dp" >
- 
-  <TextView
-    android:id="@+id/song_title"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:textColor="#00FF00"
-    android:textSize="20sp"
-    android:textStyle="bold" />
- 
-  <TextView
-    android:id="@+id/song_artist"
+    android:orientation="horizontal"
+    
+    android:padding="5dp" >
+    
+    <ImageView
+        android:id="@+id/ImageView01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/icmpmove" >
+    </ImageView>
+    
+    <LinearLayout 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:textColor="#00FF00"
-    android:textSize="18sp" />
- 
+    android:onClick="songPicked"
+    android:orientation="vertical"
+    android:padding="5dp" >
+
+        <TextView
+            android:id="@+id/song_title"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#00FF00"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/song_artist"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#007700"
+            android:textSize="18sp" />
+</LinearLayout>
 </LinearLayout>
