--- a/ZezoMusicPlayer/res/layout/activity_main.xml
+++ b/ZezoMusicPlayer/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         tools:context=".MainActivity" >
 
         <EditText
-            android:id="@+id/inputSearch"
+            android:id="@+id/searchBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.8"
