--- a/ZezoMusicPlayer/res/layout/song.xml
+++ b/ZezoMusicPlayer/res/layout/song.xml
@@ -3,7 +3,8 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="5dp" >
+    android:padding="5dp"
+    android:background="#FFFFFF" >
 
     <ImageView
         android:id="@+id/ImageView01"
@@ -18,13 +19,13 @@
         android:layout_height="wrap_content"
         android:onClick="onSongPicked"
         android:orientation="vertical"
-        android:padding="5dp" >
+        android:padding="5dp">
 
         <TextView
             android:id="@+id/song_title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textColor="#00FF00"
+            android:textColor="#000000"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -32,7 +33,7 @@
             android:id="@+id/song_artist"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textColor="#007700"
+            android:textColor="#AAAAAA"
             android:textSize="18sp" />
     </LinearLayout>
 
