--- a/ZezoMusicPlayer/res/menu/main.xml
+++ b/ZezoMusicPlayer/res/menu/main.xml
@@ -9,14 +9,14 @@
     
   <item
     android:id="@+id/action_shuffle"
-    android:icon="@drawable/rand"
+    android:icon="@drawable/shuffle"
     android:orderInCategory="2"
     android:showAsAction="always"
     android:title="Shuffle"/>
  
   <item
-    android:id="@+id/action_end"
-    android:icon="@drawable/end"
+    android:id="@+id/action_exit"
+    android:icon="@drawable/exit"
     android:orderInCategory="3"
     android:showAsAction="always"
     android:title="@string/Exit"/> 
