highlight selected song with drag bug

--- a/ZezoMusicPlayer/res/layout/activity_main.xml
+++ b/ZezoMusicPlayer/res/layout/activity_main.xml
@@ -60,7 +60,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:fastScrollAlwaysVisible="true"
-        android:fastScrollEnabled="true" >
+        android:fastScrollEnabled="true"
+        android:choiceMode="singleChoice"
+        android:listSelector="#660000" >
     </com.zezo.zezomusicplayer.SongListView>
 
     
