--- a/ZezoMusicPlayer/res/layout/song.xml
+++ b/ZezoMusicPlayer/res/layout/song.xml
@@ -25,7 +25,7 @@
             android:id="@+id/song_title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
+            android:textColor="@drawable/list_item_text_selector" 
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -33,7 +33,7 @@
             android:id="@+id/song_artist"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textColor="#AAAAAA"
+            android:textColor="@drawable/list_item_text_selector"
             android:textSize="18sp" />
     </LinearLayout>
 
