--- a/ZezoMusicPlayer/res/menu/main.xml
+++ b/ZezoMusicPlayer/res/menu/main.xml
@@ -2,7 +2,7 @@
 
     <item
     android:id="@+id/action_search"
-    android:icon="@drawable/search"
+    android:icon="@drawable/magnifier"
     android:orderInCategory="1"
     android:showAsAction="always"
     android:title="@string/Search"/>
@@ -16,7 +16,7 @@
  
   <item
     android:id="@+id/action_exit"
-    android:icon="@drawable/exit"
+    android:icon="@drawable/skull"
     android:orderInCategory="3"
     android:showAsAction="always"
     android:title="@string/Exit"/> 
