--- a/ZezoMusicPlayer/res/drawable-hdpi/list_item_text_selector.xml
+++ b/ZezoMusicPlayer/res/drawable-hdpi/list_item_text_selector.xml
@@ -1,16 +1,7 @@
-<selector
-xmlns:android="http://schemas.android.com/apk/res/android">
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-<item android:state_activated="true"
-     android:color="#FF0000">
-</item>
-
-<item android:state_pressed="true"
-     android:color="#000">
-</item>
-
-<item android:state_pressed="false"
-     android:color="#000">
-</item>
+    <item android:state_activated="true" android:color="#FFFFFF"></item>
+    <item android:state_pressed="true" android:color="#000"></item>
+    <item android:state_pressed="false" android:color="#000"></item>
 
 </selector>
