--- a/ZezoMusicPlayer/res/layout/song.xml
+++ b/ZezoMusicPlayer/res/layout/song.xml
@@ -2,30 +2,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:background="#FFFFFF"
+    android:clickable="false"
+    android:focusable="false"
+    android:focusableInTouchMode="false"
     android:orientation="horizontal"
-    android:padding="5dp"
-    android:background="#FFFFFF" >
+    android:padding="5dp" >
 
     <ImageView
         android:id="@+id/ImageView01"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:src="@drawable/icmpmove" >
     </ImageView>
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:onClick="onSongPicked"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:orientation="vertical"
-        android:padding="5dp">
+        android:padding="5dp" >
 
         <TextView
             android:id="@+id/song_title"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textColor="@drawable/list_item_text_selector" 
+            android:clickable="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:textColor="@drawable/list_item_text_selector"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -33,6 +44,9 @@
             android:id="@+id/song_artist"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:clickable="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:textColor="@drawable/list_item_text_selector"
             android:textSize="18sp" />
     </LinearLayout>
