--- a/ZezoMusicPlayer/res/menu/main.xml
+++ b/ZezoMusicPlayer/res/menu/main.xml
@@ -20,5 +20,11 @@
     android:orderInCategory="3"
     android:showAsAction="always"
     android:title="@string/Exit"/> 
+    
+  <item
+    android:id="@+id/action_delete"
+    android:orderInCategory="4"
+    android:showAsAction="collapseActionView"
+    android:title="@string/Delete"/> 
  
 </menu>
