--- a/ZezoMusicPlayer/res/drawable-hdpi/list_item_background_selector.xml
+++ b/ZezoMusicPlayer/res/drawable-hdpi/list_item_background_selector.xml
@@ -1,7 +1,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_activated="true" android:color="#000000"></item>
-    <item android:state_pressed="true" android:color="#0094CE"></item>
-    <item android:state_pressed="false" android:color="#ACD52B"></item>
+    <item android:drawable="@color/black" android:state_activated="true"/>
+    <item android:drawable="@color/white" android:state_pressed="true"/>
+    <item android:drawable="@color/white" android:state_pressed="false"/>
 
 </selector>
