--- a/ZezoMusicPlayer/res/drawable-hdpi/list_item_text_selector.xml
+++ b/ZezoMusicPlayer/res/drawable-hdpi/list_item_text_selector.xml
@@ -1,7 +1,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_activated="true" android:color="#FFFFFF"></item>
-    <item android:state_pressed="true" android:color="#000"></item>
-    <item android:state_pressed="false" android:color="#000"></item>
+    <item android:state_activated="true" android:color="#FFFFFF"/>
+    <item android:state_pressed="true" android:color="#000"/>
+    <item android:state_pressed="false" android:color="#000"/>
+    
+   
 
 </selector>
