--- a/ZezoMusicPlayer/res/layout/song.xml
+++ b/ZezoMusicPlayer/res/layout/song.xml
@@ -27,7 +27,8 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:orientation="vertical"
-        android:padding="5dp" >
+        android:padding="5dp"
+        android:onClick="onSongPicked" >
 
         <TextView
             android:id="@+id/song_title"
@@ -37,6 +38,7 @@
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:textColor="@drawable/list_item_text_selector"
+            android:background="@drawable/list_item_background_selector"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -48,6 +50,7 @@
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:textColor="@drawable/list_item_text_selector"
+            android:background="@drawable/list_item_background_selector"
             android:textSize="18sp" />
     </LinearLayout>
 
