--- a/ZezoMusicPlayer/res/layout/activity_main.xml
+++ b/ZezoMusicPlayer/res/layout/activity_main.xml
@@ -62,8 +62,8 @@
         android:fastScrollAlwaysVisible="true"
         android:fastScrollEnabled="true"
         android:choiceMode="singleChoice"
-        android:listSelector="#660000"
-        
+        android:listSelector="#660000"        
+        android:descendantFocusability="blocksDescendants"        
          >
     </com.zezo.zezomusicplayer.SongListView>
 
