--- a/ZezoMusicPlayer/res/layout/activity_main.xml
+++ b/ZezoMusicPlayer/res/layout/activity_main.xml
@@ -8,6 +8,9 @@
     tools:context=".MainActivity" >
     
     <TextView
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:id="@+id/currentTitle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -16,6 +19,9 @@
         android:textStyle="bold" />
 
     <TextView
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:id="@+id/currentArtist"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
