--- a/ZezoMusicPlayer/res/layout/activity_main.xml
+++ b/ZezoMusicPlayer/res/layout/activity_main.xml
@@ -6,25 +6,25 @@
     android:orientation="vertical"
     android:windowSoftInputMode="adjustPan"
     tools:context=".MainActivity" >
-    
+
     <TextView
-        android:clickable="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
         android:id="@+id/currentTitle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold" />
 
     <TextView
-        android:clickable="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
         android:id="@+id/currentArtist"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:clickable="false"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:textColor="#AAAAAA"
         android:textSize="18sp" />
 
@@ -65,11 +65,9 @@
         android:id="@+id/song_list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:choiceMode="singleChoice"
         android:fastScrollAlwaysVisible="true"
         android:fastScrollEnabled="true"
-        android:choiceMode="singleChoice"
-        android:listSelector="#660000"        
-         >
+        android:listSelector="#660000" >
     </com.zezo.zezomusicplayer.SongListView>
-
 </LinearLayout>
