--- a/ZezoMusicPlayer/res/layout/song.xml
+++ b/ZezoMusicPlayer/res/layout/song.xml
@@ -17,6 +17,7 @@
         android:clickable="false"
         android:focusable="false"
         android:focusableInTouchMode="false"
+        android:onClick="onOpenContextMenu"
         android:src="@drawable/draghandle" >
     </ImageView>
 
