min api change icons and shit

--- a/ZezoMusicPlayer/res/values/styles.xml
+++ b/ZezoMusicPlayer/res/values/styles.xml
@@ -1,10 +1,10 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    <style name="AppBaseTheme" parent="Theme.AppCompat.Light">
+    <style name="AppBaseTheme" parent="Theme.AppCompat">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
@@ -12,23 +12,19 @@
         -->
     </style>
 
-    <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-    </style>
+   
 
-    <style name="MyTheme" parent="Theme.AppCompat.Light">
+    <style name="MyTheme" parent="Theme.AppCompat">
         <item name="actionBarStyle">@style/MyActionBar</item>
     </style>
 
-    <style name="MyActionBar" parent="style/Widget.AppCompat.Light.ActionBar">
-        <item name="android:background">@color/DarkGray</item>
+    <style name="MyActionBar" parent="style/Widget.AppCompat.ActionBar">
+        <item name="android:background">@color/Red</item>
         <item name="titleTextStyle">@style/MyActionBarTitleText</item>
     </style>
 
     <style name="MyActionBarTitleText" parent="style/TextAppearance.AppCompat.Widget.ActionBar.Title">
-        <item name="android:textColor">@color/lime</item>
-        <item name="android:background">@color/DarkGray</item>
+        <item name="android:textColor">#ff0000</item>
     </style>
 
 </resources>
