--- a/ZezoMusicPlayer/res/layout/song.xml
+++ b/ZezoMusicPlayer/res/layout/song.xml
@@ -18,7 +18,7 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:onClick="onOpenContextMenu"
-        android:src="@drawable/contextmenuhandle" >
+        android:src="@drawable/menuwhite40" >
     </ImageView>
 
     <LinearLayout
