--- a/ZezoMusicPlayer/res/menu/main.xml
+++ b/ZezoMusicPlayer/res/menu/main.xml
@@ -2,21 +2,21 @@
 
     <item
     android:id="@+id/action_search"
-    android:icon="@drawable/magnifier"
+    android:icon="@drawable/magnifierwhite40"
     android:orderInCategory="1"
     android:showAsAction="always"
     android:title="@string/Search"/>
     
   <item
     android:id="@+id/action_shuffle"
-    android:icon="@drawable/shuffle"
+    android:icon="@drawable/shufflewhite40"
     android:orderInCategory="2"
     android:showAsAction="always"
     android:title="Shuffle"/>
  
   <item
     android:id="@+id/action_exit"
-    android:icon="@drawable/skull"
+    android:icon="@drawable/opendoorwhite40"
     android:orderInCategory="3"
     android:showAsAction="always"
     android:title="@string/Exit"/> 
