--- a/ZezoMusicPlayer/res/menu/main.xml
+++ b/ZezoMusicPlayer/res/menu/main.xml
@@ -12,19 +12,13 @@
     android:icon="@drawable/shufflewhite40"
     android:orderInCategory="2"
     android:showAsAction="always"
-    android:title="Shuffle"/>
+    android:title="@string/Shuffle"/>
  
   <item
     android:id="@+id/action_exit"
     android:icon="@drawable/opendoorwhite40"
     android:orderInCategory="3"
     android:showAsAction="always"
-    android:title="@string/Exit"/> 
-    
-  <item
-    android:id="@+id/action_delete"
-    android:orderInCategory="4"
-    android:showAsAction="collapseActionView"
-    android:title="@string/Delete"/> 
+    android:title="@string/Exit"/>   
  
 </menu>
