--- a/ZezoMusicPlayer/res/layout/activity_main.xml
+++ b/ZezoMusicPlayer/res/layout/activity_main.xml
@@ -24,45 +24,11 @@
         android:textColor="@color/gray"
         android:textSize="14sp" />
 
-    <!-- <FrameLayout -->
-    <!-- android:id="@+id/fragmentContainer" -->
-    <!-- > -->
-
-
-    <!-- </FrameLayout> -->
-
-    <LinearLayout
-        android:id="@+id/searchPane"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="#000000"
-        android:orientation="horizontal"
-        android:weightSum="1.0"
-        android:windowSoftInputMode="adjustPan"
-        tools:context=".MainActivity" >
-
-        <EditText
-            android:id="@+id/searchBox"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.8"
-            android:duplicateParentState="true"
-            android:hint="@string/Search"
-            android:inputType="textVisiblePassword"
-            android:longClickable="true"
-            android:textColor="@color/white" >
-
-            <requestFocus />
-        </EditText>
-
-        <Button
-            android:id="@+id/speakButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:onClick="onTalkButtonClick"
-            android:text="Talk" />
-    </LinearLayout>
+    <FrameLayout
+        android:id="@+id/fragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </FrameLayout>
 
     <com.zezo.zezomusicplayer.SongListView
         android:id="@+id/song_list"
