--- a/ZezoMusicPlayer/res/layout/activity_main.xml
+++ b/ZezoMusicPlayer/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:onClick="scrollToCurrent"
+        android:clickable="true"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold" />
@@ -21,6 +22,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:onClick="scrollToCurrent"
+        android:clickable="true"
         android:textColor="@color/gray"
         android:textSize="14sp" />
 
