--- a/ZezoMusicPlayer/res/menu/main.xml
+++ b/ZezoMusicPlayer/res/menu/main.xml
@@ -1,24 +1,23 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:zezo="http://schemas.android.com/apk/res-auto" >
 
     <item
-    android:id="@+id/action_search"
-    android:icon="@drawable/magnifierwhite40"
-    android:orderInCategory="1"
-    android:showAsAction="always"
-    android:title="@string/Search"/>
-    
-  <item
-    android:id="@+id/action_shuffle"
-    android:icon="@drawable/shufflewhite40"
-    android:orderInCategory="2"
-    android:showAsAction="always"
-    android:title="@string/Shuffle"/>
- 
-  <item
-    android:id="@+id/action_exit"
-    android:icon="@drawable/opendoorwhite40"
-    android:orderInCategory="3"
-    android:showAsAction="always"
-    android:title="@string/Exit"/>   
- 
+        android:id="@+id/action_search"
+        android:icon="@drawable/magnifierwhite40"
+        android:orderInCategory="1"
+        android:title="@string/Search"
+        zezo:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/action_shuffle"
+        android:icon="@drawable/shufflewhite40"
+        android:orderInCategory="2"
+        android:title="@string/Shuffle"
+        zezo:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/action_exit"
+        android:icon="@drawable/opendoorwhite40"
+        android:orderInCategory="3"
+        android:title="@string/Exit"
+        zezo:showAsAction="ifRoom"/>
+
 </menu>
