--- a/ZezoMusicPlayer/res/menu/main.xml
+++ b/ZezoMusicPlayer/res/menu/main.xml
@@ -6,18 +6,18 @@
         android:icon="@drawable/magnifierwhite40"
         android:orderInCategory="1"
         android:title="@string/Search"
-        zezo:showAsAction="ifRoom"/>
+        zezo:showAsAction="always"/>
     <item
         android:id="@+id/action_shuffle"
         android:icon="@drawable/shufflewhite40"
         android:orderInCategory="2"
         android:title="@string/Shuffle"
-        zezo:showAsAction="ifRoom"/>
+        zezo:showAsAction="always"/>
     <item
         android:id="@+id/action_exit"
         android:icon="@drawable/opendoorwhite40"
         android:orderInCategory="3"
         android:title="@string/Exit"
-        zezo:showAsAction="ifRoom"/>
+        zezo:showAsAction="always"/>
 
 </menu>
