--- a/ZezoMusicPlayer/res/layout/zezo_appwidget.xml
+++ b/ZezoMusicPlayer/res/layout/zezo_appwidget.xml
@@ -1,36 +1,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/list_item_background_selector"
-            android:clickable="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:orientation="horizontal"
-            android:padding="5dp" >
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/list_item_background_selector"
+    android:clickable="false"
+    android:focusable="false"
+    android:focusableInTouchMode="false"
+    android:orientation="horizontal"
+    android:padding="5dp" >
 
-            <TextView
-                android:id="@+id/song_artist"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:background="@drawable/list_item_background_selector"
-                android:clickable="false"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:textColor="@drawable/list_item_text_selector"
-                android:textSize="10sp" />
-            
-             <TextView
-                android:id="@+id/songDuration"
-                android:layout_width="match_parent"
-                android:gravity="right"
-                android:layout_height="fill_parent"
-                android:background="@drawable/list_item_background_selector"
-                android:clickable="false"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
-                android:textColor="@drawable/list_item_text_selector"
-                android:textSize="10sp"
-                android:paddingRight="5dp"
-                 />
-            </LinearLayout>
+    <TextView
+        android:id="@+id/currentTitle"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:onClick="scrollToCurrent"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/currentArtist"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:textColor="@color/gray"
+        android:textSize="14sp" />
+
+</LinearLayout>
