--- a/ZezoMusicPlayer/res/layout/activity_main.xml
+++ b/ZezoMusicPlayer/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:onClick="scrollToCurrent"
         android:textColor="@color/gray"
         android:textSize="14sp" />
 
