--- a/ZezoMusicPlayer/res/menu/main.xml
+++ b/ZezoMusicPlayer/res/menu/main.xml
@@ -1,22 +1,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:zezo="http://schemas.android.com/apk/res-auto" >
-
+    
+    <item
+        android:id="@+id/action_set_folder"
+        android:icon="@drawable/magnifierwhite40"
+        android:orderInCategory="1"
+        android:title="@string/SetFolder"
+        zezo:showAsAction="always"/>
     <item
         android:id="@+id/action_search"
         android:icon="@drawable/magnifierwhite40"
-        android:orderInCategory="1"
+        android:orderInCategory="2"
         android:title="@string/Search"
         zezo:showAsAction="always"/>
     <item
         android:id="@+id/action_shuffle"
         android:icon="@drawable/shufflegrey40"
-        android:orderInCategory="2"
+        android:orderInCategory="3"
         android:title="@string/Shuffle"
         zezo:showAsAction="always"/>
     <item
         android:id="@+id/action_exit"
         android:icon="@drawable/opendoorwhite40"
-        android:orderInCategory="3"
+        android:orderInCategory="4"
         android:title="@string/Exit"
         zezo:showAsAction="always"/>
 
