--- a/ZezoMusicPlayer/res/layout/song.xml
+++ b/ZezoMusicPlayer/res/layout/song.xml
@@ -22,11 +22,11 @@
     </ImageView>
 
     <LinearLayout
+        android:id="@+id/song"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:onClick="onSongClicked"
         android:orientation="vertical"
         android:padding="5dp" >
 
