--- a/ZezoMusicPlayer/res/layout/browser.xml
+++ b/ZezoMusicPlayer/res/layout/browser.xml
@@ -9,6 +9,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="50sp"/>
+        android:textSize="50sp"
+        android:text="@string/ComingSoon"/>
  
 </LinearLayout>
