--- a/ZezoMusicPlayer/res/layout/browser.xml
+++ b/ZezoMusicPlayer/res/layout/browser.xml
@@ -1,15 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical" >
- 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="50sp"
-        android:text="@string/ComingSoon"/>
- 
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#000000"
+    android:orientation="vertical"
+    android:windowSoftInputMode="adjustPan"
+    tools:context=".MusicPlayerActivity" >
+
+    <ListView
+        android:id="@+id/filelist"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".95"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:clickable="false"
+        android:choiceMode="singleChoice"
+        android:fastScrollAlwaysVisible="true"
+        android:fastScrollEnabled="true"
+        android:listSelector="#660000" >
+    </ListView>
+
 </LinearLayout>
