--- a/ZezoMusicPlayer/res/layout/file.xml
+++ b/ZezoMusicPlayer/res/layout/file.xml
@@ -12,6 +12,9 @@
     <TextView
         android:id="@+id/filename"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="@drawable/list_item_text_selector"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
