--- a/ZezoMusicPlayer/res/values/styles.xml
+++ b/ZezoMusicPlayer/res/values/styles.xml
@@ -19,9 +19,14 @@
     </style>
 
     <style name="MyActionBar" parent="style/Widget.AppCompat.ActionBar">
-        <item name="android:background">@color/White</item>
-        <item name="android:text">"@string/zezo"</item>
+        <item name="android:titleTextStyle">@style/NoTitleText</item>
+        <item name="android:subtitleTextStyle">@style/NoTitleText</item>
     </style>
+    
+    <style name="NoTitleText">
+        <item name="android:displayOptions">useLogo|showHome</item>
+        <item name="android:textColor">#00000000</item>
+</style>
 
 
 </resources>
