--- a/ZezoMusicPlayer/res/layout/playlist.xml
+++ b/ZezoMusicPlayer/res/layout/playlist.xml
@@ -7,17 +7,23 @@
     android:windowSoftInputMode="adjustPan"
     tools:context=".MusicPlayerActivity" >
 
+    <fragment
+        android:id="@+id/search"
+        android:name="com.zezo.music.SearchFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <ListView
         android:id="@+id/song_list"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight=".95"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:clickable="false"
         android:choiceMode="singleChoice"
+        android:clickable="false"
         android:fastScrollAlwaysVisible="true"
         android:fastScrollEnabled="true"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:listSelector="#660000" >
     </ListView>
 
