--- a/ZezoMusicPlayer/res/layout/playlist.xml
+++ b/ZezoMusicPlayer/res/layout/playlist.xml
@@ -16,8 +16,7 @@
     <ListView
         android:id="@+id/song_list"
         android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".95"
+        android:layout_height="wrap_content"
         android:choiceMode="singleChoice"
         android:clickable="false"
         android:fastScrollAlwaysVisible="true"
