--- a/ZezoMusicPlayer/res/layout/activity_main.xml
+++ b/ZezoMusicPlayer/res/layout/activity_main.xml
@@ -7,8 +7,8 @@
 
     <RelativeLayout
         android:id="@+id/content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_above="@+id/nowplaying"
         android:layout_alignWithParentIfMissing="true"
         android:orientation="vertical" >
@@ -26,17 +26,17 @@
                 android:background="#000"
                 android:paddingBottom="5dp"
                 android:paddingTop="5dp"
-                android:textColor="#fff" />
+                android:textColor="#fff"
+                android:layout_marginBottom="100dp" />
         </android.support.v4.view.ViewPager>
 
         <ImageButton
             android:id="@+id/nowPlayingToggle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:background="#00FFFFFF"
-            android:src="@drawable/arrowsdown"
-            android:layout_alignParentBottom="true" />
-
+            android:src="@drawable/arrowsdown" />
     </RelativeLayout>
 
     <fragment
