--- a/ZezoMusicPlayer/res/layout/playlist.xml
+++ b/ZezoMusicPlayer/res/layout/playlist.xml
@@ -1,11 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="#000000"
     android:orientation="vertical"
-    android:windowSoftInputMode="adjustPan"
-    tools:context=".MusicPlayerActivity" >
+    android:windowSoftInputMode="adjustPan" >
 
     <fragment
         android:id="@+id/search"
@@ -15,7 +14,7 @@
 
     <ListView
         android:id="@+id/song_list"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:choiceMode="singleChoice"
         android:clickable="false"
