--- a/ZezoMusicPlayer/res/values/styles.xml
+++ b/ZezoMusicPlayer/res/values/styles.xml
@@ -21,11 +21,14 @@
     <style name="MyActionBar" parent="style/Widget.AppCompat.ActionBar">
         <item name="android:titleTextStyle">@style/NoTitleText</item>
         <item name="android:subtitleTextStyle">@style/NoTitleText</item>
+         <item name="background">@color/Black</item>
     </style>
     
     <style name="NoTitleText">
+        
         <item name="android:displayOptions">useLogo|showHome</item>
         <item name="android:textColor">#00000000</item>
+        
 </style>
 
 
