bigger drawer button padding for tab tops celan up - reformat

--- a/ZezoMusicPlayer/res/layout/playlist.xml
+++ b/ZezoMusicPlayer/res/layout/playlist.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:background="#000000"
     android:orientation="vertical"
-    android:windowSoftInputMode="adjustPan" >
+    android:windowSoftInputMode="adjustPan"
+    android:paddingTop="5dp" >
 
     <fragment
         android:id="@+id/search"
