--- a/ZezoMusicPlayer/res/layout/activity_main.xml
+++ b/ZezoMusicPlayer/res/layout/activity_main.xml
@@ -26,8 +26,7 @@
                 android:background="#000"
                 android:paddingBottom="5dp"
                 android:paddingTop="5dp"
-                android:textColor="#fff"
-                android:layout_marginBottom="100dp" />
+                android:textColor="#fff" />
         </android.support.v4.view.ViewPager>
 
         <ImageButton
