--- a/ZezoMusicPlayer/res/layout/browser.xml
+++ b/ZezoMusicPlayer/res/layout/browser.xml
@@ -4,7 +4,8 @@
     android:layout_height="fill_parent"
     android:background="#000000"
     android:orientation="vertical"
-    android:windowSoftInputMode="adjustPan">
+    android:windowSoftInputMode="adjustPan"
+    android:paddingTop="5dp" >
 
     <ListView
         android:id="@+id/filelist"
