--- a/ZezoMusicPlayer/res/values/colors.xml
+++ b/ZezoMusicPlayer/res/values/colors.xml
@@ -157,5 +157,7 @@
     <color name="DarkBlue">#00008B</color>
     <color name="Navy">#000080</color>
     <color name="Black">#000000</color>
+    
+    <color name="VeryDarkGray">#111111</color>
 
 </resources>
