searchview and now playing as tab

--- a/ZezoMusicPlayer/res/layout/playlist.xml
+++ b/ZezoMusicPlayer/res/layout/playlist.xml
@@ -4,14 +4,8 @@
     android:layout_height="match_parent"
     android:background="#000000"
     android:orientation="vertical"
-    android:windowSoftInputMode="adjustPan"
-    android:paddingTop="5dp" >
-
-    <fragment
-        android:id="@+id/search"
-        android:name="com.zezo.music.SearchFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    android:paddingTop="5dp"
+    android:windowSoftInputMode="adjustPan" >
 
     <ListView
         android:id="@+id/song_list"
