--- a/ZezoMusicPlayer/res/menu/playlist.xml
+++ b/ZezoMusicPlayer/res/menu/playlist.xml
@@ -1,12 +1,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:zezo="http://schemas.android.com/apk/res-auto" >
     
-    <item
-        android:id="@+id/action_search"
+    <item     
+        android:id="@+id/grid_default_search"
         android:icon="@drawable/magnifierwhite40"
-        android:orderInCategory="2"
-        android:title="@string/Search"
-        zezo:showAsAction="always"/>
+        android:title="search"
+        zezo:showAsAction="always"
+        zezo:actionViewClass="android.support.v7.widget.SearchView"
+        android:orderInCategory="1" 
+    />
+    
     <item
         android:id="@+id/action_shuffle"
         android:icon="@drawable/shufflegrey40"
