--- a/ZezoMusicPlayer/res/layout/nowplaying.xml
+++ b/ZezoMusicPlayer/res/layout/nowplaying.xml
@@ -2,7 +2,10 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@color/VeryDarkGray"
+    android:focusable="false"
+    android:focusableInTouchMode="false"
     android:orientation="vertical"
+    android:gravity="center"
     android:windowSoftInputMode="adjustPan" >
 
     <LinearLayout
@@ -10,12 +13,16 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
         android:orientation="vertical" >
 
         <TextView
             android:id="@+id/currentTitle"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -24,6 +31,8 @@
             android:id="@+id/currentArtist"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:textColor="@color/gray"
             android:textSize="14sp" />
     </LinearLayout>
@@ -34,8 +43,7 @@
         android:layout_height="100dp"
         android:clickable="false"
         android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:windowSoftInputMode="stateHidden" >
+        android:focusableInTouchMode="false" >
     </FrameLayout>
 
 </LinearLayout>
